--- a/src/styles.css
+++ b/src/styles.css
@@ -31,6 +31,18 @@ canvas {
   margin: 0 auto;
 }
 
+.tree-display{
+  width: 600px;
+  max-width: 600px;
+  height: 450px;
+  max-height: 500px;
+  overflow: auto;
+  background-color: white;
+  border: 5px solid #0c24ff;
+  margin: 0 auto;
+  /* tab-size: 4; */
+}
+
 h1 {
   margin: 15px 0;
   text-align: center;
