--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@600;500;600&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@500;600&display=swap");
 
 * {
   box-sizing: border-box;
